--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "angular-animate": "^1.5.8",
     "angular-ui-router": "^0.3.1",
     "babel-preset-es2015": "^6.13.2",
+    "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
     "electron-settings": "^2.1.1",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+    "lodash.debounce": "^4.0.8",
     "mkdirp-promise": "^2.0.0",
     "moment": "^2.14.1",
     "random-js": "^1.0.8",
